--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: node_js
 node_js:
   - "0.10"
 before_install:
-  - sudo gem install bundler
-  - sudo gem install sass
+  - rvmsudo gem install sass
